--- a/Chessington.GameEngine/Chessington.GameEngine.csproj
+++ b/Chessington.GameEngine/Chessington.GameEngine.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pieces\Class1.cs" />
     <Compile Include="StepIncrease.cs" />
     <Compile Include="Pieces\Bishop.cs" />
     <Compile Include="Board.cs" />
